# ebike-vector-search

./: .env.example  README.md  RUNBOOK.md  pyproject.toml  streamlit_app.py
.streamlit/: secrets.toml.example
data/: embeddings.npy
data/documents/: corpus.json
src/: app.py  connect.py  ingest.py  rag.py  search.py
