[project]
name = "ebike-vector-search"
version = "0.1.0"
description = "Semantic search and RAG over Boston e-bike regulations using Snowflake vector storage"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0.0",
    "numpy>=2.4.5",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.0",
    "snowflake-connector-python>=4.5.0",
    "streamlit>=1.57.0",
]
